[package]
name = "daemon_console_lite"
version = "0.1.2"
edition = "2024"
rust-version = "1.90.0"
authors = ["Mooling0602 <CleMooling@outlook.com>"]
description = "A simple console library for daemon applications."
repository = "https://github.com/Mooling0602/Daemon_Console_Lite"
homepage = "https://crates.io/crates/daemon_console_lite"
license = "GPL-3.0"
readme = "README.md"
documentation = "https://docs.rs/daemon_console_lite"
keywords = ["console", "daemon", "terminal", "tui"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = ["target/", ".git/", ".gitignore"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = "0.29.0"
unicode-width = "0.2.2"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["time", "macros", "rt-multi-thread"] }

[lib]
name = "daemon_console_lite"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "test/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
